Scrollbar: Add webkit style. Fixes #108

--- a/stackoverflow-dark.css
+++ b/stackoverflow-dark.css
@@ -628,6 +628,23 @@
     float: left !important;
   }
 
+  /* scroll bar */
+  ::-webkit-scrollbar {
+    max-width: 10px !important;
+    max-height: 10px !important;
+    background: #1d1d1d !important;
+  }
+  ::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
+    background: #1d1d1d !important;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: rgba(175, 175, 175, .5) !important;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(65, 131, 196, .8) !important;
+    background: rgba(/*[[base-color-rgb]]*/, .8) !important;
+  }
+
   /* === badges === */
   a.badge[title^="bronze"], a.badge-tag[title^="bronze"], .badge3 + .badgecount {
     color: #c96 !important;
